Fixes visibility of navigation on tablet when logo and company name is hidden (DT-1422)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2278,7 +2278,7 @@ footer.bk-footer .widget.profile .twitter span, .widget.profile .twitter span a 
   /* NAV */
 
   .widget.extendednavigation {
-    top:-50px;
+    top: -22px;
   }
   
  .widget .extendednavigation ul {
